# occt-samples-gtk

./: .gitignore  CMakeLists.txt  LICENSE.txt  OcctGtkViewer.cxx  OcctGtkViewer.hxx  ReadMe.md  main.cpp  readme.md
.github/workflows/: build.yml  build_linux.yml  build_linux_gcc_gtk3.yml  build_linux_gcc_gtk4.yml  build_linux_gcc_gtkmm3.yml  build_wnt.yml  screenshot.sh
adm/cmake/: FindOpenCASCADE.cmake
occt-gtk-glarea/: CMakeLists.txt  OcctGtkGLAreaViewer.cpp  OcctGtkGLAreaViewer.h  OcctGtkViewer.cpp  OcctGtkViewer.h  OcctGtkWindowSample.cpp  main.cpp
occt-gtk-tools/: CMakeLists.txt  OcctGlTools.cpp  OcctGlTools.h  OcctGtkTools.cpp  OcctGtkTools.h
occt-gtk3-glarea/: CMakeLists.txt  OcctGtkGLAreaViewer.cpp  OcctGtkGLAreaViewer.h  OcctGtkWindowSample.cpp  OcctGtkWindowSample.h  main.cpp
occt-gtk4-glarea/: CMakeLists.txt  OcctGtkGLAreaViewer.cpp  OcctGtkGLAreaViewer.h  OcctGtkWindowSample.cpp  OcctGtkWindowSample.h  main.cpp
